2005-11-18  Kazuhiko  <kazuhiko@fdiary.net>
	* recent_trackback3.rb: revise for mod_ruby.
	* recent_comment3.rb: revise for mod_ruby.
	* image.rb (image_info): fix a bug in analysing jpeg files.

2004-11-17 MoonWolf <moonwolf@moonwolf.com>
	* image.rb: rescue ENOENT.

2005-11-13 Kazuhiko  <kazuhiko@fdiary.net>
	* recent_trackback3.rb: revise for mod_ruby.
	* recent_comment3.rb: revise for mod_ruby.

2005-11-11 SHIBATA Hiroshi <h-sbt@nifty.com>
	* daily_theme.rb: use css_tag.

2005-11-10 SHIBATA Hiroshi <h-sbt@nifty.com>
	* daily_theme.rb: add new plugin.

2005-11-02  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-register.rb: revise for rast-0.3.x.

2005-10-20 peo <peo at mb.neweb.ne.jp>
	* rss-recent.rb: support HTTP 304 response.

2005-10-19  Masao Mutoh  <mutoh@highway.ne.jp>
	* counter.rb: Fixed a problem on Win32. Reported by Ken-ichi Mito

2005-10-18 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added net range 72.14.192.0-239.255 for Google cache

2005-10-18 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: fix typo.(nill to nil)
	* recent_trackback3.rb: fix typo.(nill to nil)
	Thanks to yowa <yowa at yowaken.dip.jp>.

2005-10-16 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: add notify about amazon associate ID in preference page.

2005-10-15 zunda <zunda at freeshell.org>
	*/disp_referrer.rb: update description about Nora.
	Thanks to yowa <yowa at yowaken.dip.jp>.

2005-10-14 zunda <zunda at freeshell.org>
	* */disp_referrer.rb: update description about unknown URLs
	listed on the browser. Thanks to FUDAN <joker at comel.or.jp>.

2005-10-13 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: delte category tags from title.
	* my-ex.rb: delete category tags from title.

2005-10-11 vette <vette at mail.ne.jp>
	* ping.rb: inherit checkbox status to preview page.

2005-10-11 TADA Tadashi <sho@spc.gr.jp>
	* tb-send.rb: delete category tags from title.

2005-10-10 TADA Tadashi <sho@spc.gr.jp>
	* my-ex.rb: my plugin: fix bug when @index was full path.
